[gd_scene load_steps=12 format=3 uid="uid://chkcjucytfsqm"]

[ext_resource type="Texture2D" uid="uid://cpth3e5la7dy" path="res://ui_systems/assets/card.png" id="1_lkoy8"]
[ext_resource type="Script" path="res://ui_systems/card.gd" id="2_f4kjk"]
[ext_resource type="Texture2D" uid="uid://c4i8ttfmqlj6u" path="res://ui_systems/assets/card_particles.png" id="2_nevj2"]
[ext_resource type="AudioStream" uid="uid://cggxsjw0183vo" path="res://ui_systems/assets/card_draw_sound.wav" id="4_iik7t"]
[ext_resource type="FontFile" uid="uid://bm17vguwia5j3" path="res://assets/fonts/VT323-Regular.ttf" id="4_njws2"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xtwmu"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
inherit_velocity_ratio = 0.067
spread = 180.0
initial_velocity_min = 157.3
initial_velocity_max = 157.3
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.75

[sub_resource type="Animation" id="Animation_5wm8q"]
resource_name = "activate"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_sv2wk"]
resource_name = "draw"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 256), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_54yw1"]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0okjl"]
resource_name = "undrawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 256)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pud3t"]
_data = {
"activate": SubResource("Animation_5wm8q"),
"draw": SubResource("Animation_sv2wk"),
"idle": SubResource("Animation_54yw1"),
"undrawn": SubResource("Animation_0okjl")
}

[node name="card" type="Node2D"]
script = ExtResource("2_f4kjk")

[node name="card_control" type="Control" parent="."]
custom_minimum_size = Vector2(128, 176)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="activate_particles" type="GPUParticles2D" parent="."]
z_index = 2
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_xtwmu")
texture = ExtResource("2_nevj2")
one_shot = true
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../card_sprite")
libraries = {
"": SubResource("AnimationLibrary_pud3t")
}

[node name="death_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="card_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_lkoy8")

[node name="card_text" type="VBoxContainer" parent="card_sprite"]
offset_left = -51.0
offset_top = 9.00001
offset_right = -11.0
offset_bottom = 49.0
mouse_filter = 2

[node name="card_title" type="Label" parent="card_sprite/card_text"]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_njws2")
theme_override_font_sizes/font_size = 16
text = "Fire Demon"

[node name="card_details" type="Label" parent="card_sprite/card_text"]
texture_filter = 3
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_njws2")
theme_override_font_sizes/font_size = 12
text = "Summon a flame"
autowrap_mode = 3

[node name="card_image" type="TextureRect" parent="card_sprite"]
offset_left = -46.0
offset_top = -71.0
offset_right = -6.00002
offset_bottom = -31.0
mouse_filter = 2

[node name="disabled_rect" type="ColorRect" parent="card_sprite"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -88.0
offset_right = -64.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.764706)

[node name="draw_card" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_iik7t")

[node name="draw_delay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="activate_sound" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="card_control" to="." method="_on_card_control_gui_input"]
[connection signal="mouse_entered" from="card_control" to="." method="_on_card_control_mouse_entered"]
[connection signal="mouse_exited" from="card_control" to="." method="_on_card_control_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="draw_delay" to="." method="_on_draw_delay_timeout"]
